# voxels

./: .gitignore  Cargo.toml  README.md
client/: Cargo.toml  index.html
client/src/: camera.rs  debug.rs  main.rs  player.rs
client/src/connection/: bridge.rs  cert.rs  local.rs  mod.rs  quic.rs
client/src/network/: cert.rs  client.rs  events.rs  local.rs  mod.rs  remote.rs  resources.rs  systems.rs
client/src/world/: chunk.rs  core.rs  events.rs  mesh.rs  mod.rs  tasks.rs  terrain.rs
client/src/world/mesh/: generate.rs  mod.rs
net/: Cargo.toml
net/src/: lib.rs
server/: Cargo.toml
server/src/: lib.rs  main.rs  message.rs
shared/: Cargo.toml
shared/src/: lib.rs
src/: camera.rs  debug.rs  main.rs  player.rs
src/world/: core.rs  events.rs  mod.rs  tasks.rs  terrain.rs
voxel-client/: Cargo.toml
voxel-client/docs/: chunk-pipeline.md
voxel-client/src/: main.rs
voxel-client/src/world/: mesh.rs
voxel-core/: Cargo.toml
voxel-core/src/: lib.rs
voxel-core/src/mesh/: block.rs  mod.rs
voxel-net/: Cargo.toml
voxel-net/src/: lib.rs  main.rs  message.rs
voxel-world/: Cargo.toml
voxel-world/src/: bridge.rs  command.rs  commands.rs  envelope.rs  event.rs  events.rs  lib.rs  physics.rs  player.rs  request.rs  storage.rs  terrain.rs
