[package]
name = "client"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
bevy = "0.17"
noise = "0.9.0"
server = { version = "0.1.0", path = "../server" }
tokio = { version = "1.48.0", features = ["full"] }
voxel-core = { version = "0.1.0", path = "../voxel-core" }
voxel-world = { version = "0.1.0", path = "../voxel-world" }
