[package]
name = "voxel-world"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
flate2 = "1.1.5"
glam = "0.30.9"
noise = "0.9.0"
postcard = { version = "1.1.3", features = ["alloc"] }
serde = { version = "1.0.228", features = ["derive"] }
tokio = { version = "1.48.0", features = ["full"] }
voxel-core = { version = "0.1.0", path = "../voxel-core" }
