[package]
name = "voxel-world"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
glam = "0.32"
noise = "0.9.0"
rapier3d = "0.32.0"
serde = { version = "1.0.228", features = ["derive", "rc"] }
tokio = { version = "1.50.0", features = ["sync"] }
voxel-core = { version = "0.1.0", path = "../voxel-core" }
